# finanzas-personales

./: .env.example  .gitignore  MASTER_PROJECT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: 01-vision-y-roadmap.md  02-arquitectura.md  03-dominio-y-datos.md  04-estrategia-ia.md  05-conectores-e-integraciones.md  06-seguridad-y-backups.md  07-automatizacion-y-operacion.md  08-convenciones-y-guia-dev.md  09-riesgos-y-deuda-tecnica.md  10-observabilidad.md  11-configuracion-y-feature-flags.md  12-modelo-de-persistencia.md  13-golden-dataset.md  14-import-wizard.md  15-instalacion-y-troubleshooting.md  16-validacion-sprint-1.md  17-dashboard-financiero.md  18-analisis-formato-edwards.md  19-quality-gates.md  20-insights.md  21-merchant-resolver.md  22-resolution-pipeline.md  23-inteligencia-financiera.md  24-validacion-sprint-3.md
docs/adr/: ADR-001-monolito-modular.md  ADR-002-multiusuario-diferido.md  ADR-003-ingesta-dual.md  ADR-004-abstraccion-llm.md  ADR-005-scheduler-python-no-n8n.md  ADR-006-streamlit-tras-api.md  ADR-007-chromadb-diferido.md  ADR-008-auditoria-decisiones-ia.md  ADR-009-event-log-unificado.md  ADR-010-clasificacion-de-flujo-financiero.md
golden/: README.md
golden/cases/_TEMPLATE/: README.md  case.yaml
golden/cases/edge/001-montos-y-fechas-chilenas/: case.yaml  expected.json  input.csv
golden/cases/edge/002-edwards-rollover-anual/: case.yaml  expected.json  spec.yaml
golden/originals/: README.md
golden/tools/: build_edwards_pdf.py  verify_no_leaks.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_unrecognized_files.py  0003_import_traceability.py  0004_merchant_knowledge.py  0005_transaction_flow.py
scripts/: bootstrap.py  demo.py  seed.py
scripts/demo_data/: demo_agosto_para_wizard.csv  demo_julio.csv  demo_junio.csv
src/finanzas/: __init__.py
src/finanzas/api/: deps.py  main.py
src/finanzas/connectors/: base.py
src/finanzas/core/: db.py
src/finanzas/dashboard/: api_client.py  app.py  components.py
src/finanzas/shared/: config.py  errors.py  flags.py  logging.py
src/finanzas/workers/: runner.py  scheduler.py
tests/: conftest.py
tests/golden/: conftest.py  test_edwards_local_real.py  test_no_leaks.py  test_statements.py
tests/integration/: test_analytics.py  test_import_service.py  test_insights.py  test_merchant_resolver.py  test_reporting.py  test_resolution_pipeline.py  test_schema.py
tests/unit/: test_acquirer_extract.py  test_config.py  test_dedup.py  test_event_catalog.py  test_flags.py  test_parse_amount.py  test_pdf_utils.py
(+70 files in other folders)
